@@ -1,10 +1,11 @@
-$Id: ChangeLog 4412 2017-03-27 20:37:59Z chrfranke $
+$Id: ChangeLog 4413 2017-03-27 20:47:24Z chrfranke $
 
 2017-03-27  Christian Franke  <franke@computer.org>
 
 	smartd.cpp: Always suppress "failed to read Temperature" message
 	if SCSI device does not support temperature (ticket #817).
 	Fix initial check for SCSI temperature support.
+	Log SCSI temperature regardless of its origin.
 
 2017-03-11  Christian Franke  <franke@computer.org>
 
